tests/diagnostics/catalog/snapshots/ir/IR0068.snap
error[IR0068]: IR_E_USE_BEFORE_INIT
 --> tests/diagnostics/catalog/sources/ir/IR0068.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0068
  = help: keep IR validation diagnostics structured and catalog-backed
